--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.2",
-    "@pinia/nuxt": "^0.4.2"
+    "@pinia/nuxt": "^0.4.2",
+    "store2": "^2.14.2",
+    "vue-i18n": "^9.2.2"
   }
 }
